--- a/pull-up-backend/src/main/resources/application.properties
+++ b/pull-up-backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=pull-up-backend
+spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.database=${MONGO_DATABASE}
 spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}
