--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
+    "mongodb": "^6.19.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
