--- a/pull-up-backend/src/main/resources/application.properties
+++ b/pull-up-backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=5000
+
 spring.application.name=pull-up-backend
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.database=${MONGO_DATABASE}
